# daily-ai-radar

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-ai-radar.yml
config/: feeds.yml
digests/: 2026-05-01.md  2026-05-02.md  2026-05-03.md  2026-05-04.md  2026-05-05.md  2026-05-06.md  2026-05-08.md  2026-05-10.md  2026-05-11.md  2026-05-12.md  2026-05-13.md  2026-05-14.md  2026-05-15.md  2026-05-16.md  2026-05-17.md  2026-05-18.md  2026-05-20.md  2026-05-21.md  2026-05-22.md  2026-05-23.md  2026-05-24.md  2026-05-26.md  2026-05-27.md  2026-05-28.md  2026-05-29.md  2026-05-30.md  2026-05-31.md  2026-06-01.md  2026-06-02.md  2026-06-03.md  2026-06-04.md  2026-06-05.md  2026-06-06.md  2026-06-07.md  2026-06-08.md  2026-06-09.md  2026-06-11.md  2026-06-12.md  2026-06-13.md  2026-06-14.md  (+40 more)
src/daily_ai_radar/: __init__.py  __main__.py  cli.py  config.py  fetch.py  gemini.py  models.py  ranking.py  render.py
tests/: test_ranking.py  test_render.py
